<resources>
    <string name="nmedia">NMedia!</string>
    <string name="app_name">NMedia</string>
    <string name="postTitle">Netology.Changing your career with education</string>
    <string name="ic_avatar_description">Netology Avatar</string>
    <string name="ic_dot_description" translatable="false">Menu dots</string>
    <string name="current_time">22 jan in 17:45</string>
    <string name="ic_watches_description" translatable="false">Watches</string>
    <string name="ic_likes_description" translatable="false">Likes</string>
    <string name="ic_shares_description" translatable="false">Shares</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="choose_share_post" translatable="false">Some new content to share</string>

    <string name="content" translatable="false">Понятное меню, удобный поиск, лаконичный дизайн — пользоваться такими сайтами и приложениями одно удовольствие. Удобными их делают UX/UI-дизайнеры.

На бесплатном интенсиве «Как стать UX/UI-дизайнером: создаём свой первый сайт» рассказываем, какие задачи решает специалист. Эксперт из AGIMA даст пошаговую инструкцию по созданию сайтов на Tilda.

За 2 занятия вы:
· изучите базовые принципы UX/UI-дизайна на примере реальных кейсов;
· спроектируете собственный лендинг и сможете добавить его в портфолио;
· поймёте, интересно ли вам направление, и спланируете дальнейшие шаги для развития.

В подарок все участники получат чек-лист «Фриланс или удалёнка: что выбрать».

Регистрируйтесь, чтобы на практике познакомиться с задачами UX/UI-дизайнеров и понять, с чего начать карьеру в сфере: https://netolo.gy/cJ3N</string>
    <string name="save_post" translatable="false">Save post</string>
    <string name="edit_icon" translatable="false">edit icon</string>
    <string name="close_edit" translatable="false">Close edit</string>
    <string name="netology_banner">Netology</string>
    <string name="edit_message_banner">Edit message</string>
    <string name="press_to_start_video">Press to start video</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


</resources>